[package]
name = "ncnn-bindings"
version = "1.0.0"
edition = "2021"
license-file = "./LICENSE"
description = "Generates bindings for ncnn using bindgen"
repository = "https://github.com/TDiblik/rust-ncnn-bindings-generator"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
publish = false

[build-dependencies]
bindgen = "0.69.4"